# property-firecrawl

./: .gitignore  README.md  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  test-crawl.py
config/: settings.py
examples/: basic_usage.py
routers/: scraping.py
services/: firecrawl.py
